##############################################################

import("//react-native/common.gni")

config("LibRSAsyncStorage_config") {
  cflags_cc = [ "-std=c++17"]
  cflags_cc += [
    "-Wno-extra-semi",
    "-Wno-sign-compare",
    "-Wno-header-hygiene",
  ]

  include_dirs = [ ".",
                  "//react-native/ReactCommon/",
                  ]
}

rn_cxx_component("RSAsyncStorage") {

  # RNS Native module and its dependencies
  sources = [
    "RSAsyncStorageModule.h",
    "RSAsyncStorageModule.cpp",
  ]

  public_configs = [ ":LibRSAsyncStorage_config" ]
  public_configs += [ "//build/secondary/folly:folly_config" ]
  deps = [
    "//folly:async",
    "//skia",
  ]

  with_exceptions = true
  with_rtti = true
}
