##############################################################

import("//react-native/common.gni")

config("LibRNCAsyncStorage_config") {
  cflags_cc = [ "-std=c++17"]
  cflags_cc += [
    "-Wno-extra-semi",
    "-Wno-sign-compare",
    "-Wno-header-hygiene",
  ]

  include_dirs = [ ".",
                  "//react-native/ReactCommon/",
                  ]
}

rns_cxx_tp_component("rnasyncstorage") {

  # RNS Native module and its dependencies
  sources = [
    "RNCAsyncStorageModule.h",
    "RNCAsyncStorageModule.cpp",
  ]

  public_configs = [ ":LibRNCAsyncStorage_config" ]
  public_configs += [ "//build/secondary/folly:folly_config" ]
  deps = [
    "//folly:async",
    "//skia",
  ]

  with_exceptions = true
  with_rtti = true
}
